--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "firebase": "^10.12.5",
+    "firebase-admin": "^13.2.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.424.0",
     "next": "14.2.5",
